<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:id="@+id/character_card"
    android:layout_marginStart="@dimen/distance_horizontal"
    android:layout_marginTop="@dimen/distance_vertical"
    android:layout_marginEnd="@dimen/distance_horizontal"
    app:cardCornerRadius="@dimen/radius_shape">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/character_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/ic_loading" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_color"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_horizontal_distance"
                android:layout_marginTop="@dimen/item_vertical_distance"
                android:layout_marginEnd="@dimen/item_horizontal_distance"
                android:layout_marginBottom="@dimen/item_vertical_distance"
                android:text="@string/rick_sanchez"
                android:textColor="@color/white"
                android:textSize="@dimen/item_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/character_sapience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_horizontal_distance"
                android:layout_marginTop="@dimen/item_vertical_distance"
                android:layout_marginEnd="@dimen/item_horizontal_distance"
                android:layout_marginBottom="@dimen/item_vertical_distance"
                android:text="@string/human"
                android:textColor="@color/white"
                android:textSize="@dimen/add_info_item" />

            <TextView
                android:id="@+id/character_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_horizontal_distance"
                android:layout_marginTop="@dimen/item_vertical_distance"
                android:layout_marginEnd="@dimen/item_horizontal_distance"
                android:layout_marginBottom="@dimen/item_vertical_distance"
                android:text="@string/alive"
                android:textColor="@color/white"
                android:textSize="@dimen/add_info_item" />

        </LinearLayout>

        <ImageView
            android:id="@+id/item_gender"
            android:layout_width="@dimen/gender_item"
            android:layout_height="@dimen/gender_item"
            android:layout_gravity="bottom"
            android:layout_marginEnd="@dimen/item_horizontal_distance"
            android:layout_marginBottom="@dimen/item_vertical_distance"
            android:contentDescription="@string/gender"
            android:src="@drawable/ic_male"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>